@@ -1,0 +1,7 @@
+language: java
+jdk:
+  - oraclejdk7
+  - oraclejdk8
+script:
+  - mvn package -X -f ./pom.xml
+  - mvn install -X -f ./pom.xml
