@@ -121,7 +121,7 @@ public class ParameterizedTest {
 	public void finalize(){
 		this.pceServer.interrupt();
 		try {
-			Thread.sleep(500);
+			Thread.sleep(1500);
 		} catch (InterruptedException e) {
 			e.printStackTrace();
 		}
